--- a/css/main.css
+++ b/css/main.css
@@ -46,24 +46,27 @@ p {
 
 /*The widths are in a percentage!*/
 header {
-	height: 110px;
+	height: auto;
 	width: 100%;
 	border-bottom: 3px solid #77a466;
 	margin: 0 auto;
 	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 header h1 {
 	margin: 0;
-	padding: 38px 0;
+	padding: 20px 15px 15px 15px;
+	border-bottom: 3px solid #77a466
 }
 header h1 span {
 	color: #77a466;
 }
 
 header nav {
-	padding: 46px 0;
-	margin-left: auto;
+	padding: 25px 0;
+	/*margin-left: auto; USE THIS FOR LARGER DISPLAYS*/
 }
 header nav ul {
 	margin: 0;
@@ -73,8 +76,9 @@ header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
 	font-size: 0.875em;
-	padding: 0 10px;
-	display: inline;
+	padding: 10px 10px;
+	display: flex;
+	justify-content: center;
 }
 header nav ul li a{
 	text-decoration: none;
@@ -86,7 +90,7 @@ header nav ul li a{
 .bottom-section {
 	margin: 0 auto;
 	display: flex;
-	flex-flow: row wrap;
+	flex-flow: column wrap;
 }
 
 .main-image {
@@ -101,7 +105,7 @@ header nav ul li a{
 	height: auto;
 }
 .main-title h2 {
-	text-align: left;
+	text-align: center;
 	padding: 5px 0;
 	color: #77a466;
 }
@@ -114,19 +118,16 @@ header nav ul li a{
 .section-one,
 .section-two,
 .section-three {
-	width: 33%;
+	width: 100%;
 	height: auto;
 	border-top: 1px solid #eee;
+	text-align: center;
 }
 
 .section-one h3 {
-	padding: 10px 0;
+	padding: 10px 30px;
 }
 
-.section-two {
-	border-left: 1px solid #eee;
-	border-right: 1px solid #eee;
-}
 
 .section-two h3,
 .section-three h3 {
@@ -135,7 +136,7 @@ header nav ul li a{
 
 .menu {
 	list-style: none;
-	padding: 0;
+	padding: 0 30px;
 }
 .menu li {
 	padding: 10px 0;
@@ -155,7 +156,7 @@ header nav ul li a{
 
 /*The widths are in a percentage!*/
 footer {
-	height: 50px;
+	height: auto;
 	border-top: 3px solid #eee;
 	margin: 0 auto;
 	text-align: center;
@@ -166,4 +167,57 @@ footer span {
 	text-transform: lowercase;
 	color: #77a466;
 	font-size: 0.875em;
+}
+
+@media all and (min-width:768px){
+		/* Tablet styles here */
+.bottom-section {
+	display: flex;
+	flex-flow: row wrap;
+	}
+
+.section-one,
+.section-two,
+.section-three {
+	width: 33%
+	}
+
+}
+
+@media all and (min-width:1200px){
+		/* Desktop styles here */
+header {
+			flex-direction: row;
+			justify-content: space-between;
+		}
+
+header nav ul {
+			display: flex;
+			flex-basis: 40%;
+		}
+header h1 {
+			border-bottom: none;
+			margin: 0;
+			padding: 20px 15px;
+			width: auto;
+		}
+
+.section-two {
+			border-left: 1px solid #eee;
+			border-right: 1px solid #eee;
+		}
+
+.section-one,
+.section-two,
+.section-three {
+			flex-basis: 33%;
+			height: auto;
+			border-top: 1px solid #eee;
+		}
+.top-section,
+.bottom-section {
+			margin: 0 auto;
+			display: flex;
+			flex-flow: row wrap;
+		}
 }
